--- a/docs/integrations/v0.dev.md
+++ b/docs/integrations/v0.dev.md
@@ -22,7 +22,6 @@ Instruct v0.dev to use a Next.js serverless function to expose the WorkflowAI ag
 From the "Code" section, click on "Manage Secret keys", and follow the process to create a new secret key. Make sure to copy the API key, which will be displayed only once.
 {% endstep %}
 
-### Setup API key as a environment variable
 {% step %}
 ### Setup API key as a environment variable
 Set up `WORKFLOWAI_API_KEY` as an environment variable in your v0.dev project.
@@ -40,7 +39,7 @@ You can setup the environment variable as:
 - [specific for the Vercel project](https://vercel.com/docs/projects/environment-variables/managing-environment-variables)
 - [shared for all Vercel projects](https://vercel.com/docs/projects/environment-variables/shared-environment-variables)
 
-Read more on Vercel documentation: https://vercel.com/docs/projects/environment-variables
+Read more on [Vercel documentation](https://vercel.com/docs/projects/environment-variables)
 {% endstep %}
 {% endstepper %}
 
@@ -54,3 +53,8 @@ Read more on Vercel documentation: https://vercel.com/docs/projects/environment-
 
 github repo: https://github.com/workflowai/v0-dev-example
 
+## Help
+
+{% hint style="info" %}
+If you have any questions, please reach out to us on [Slack](https://workflowai.com/slack).
+{% endhint %}
